kubernetes/apps/minecraft/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: minecraft
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
        # Allow ingress from pods in networking namespace that are part of ingress-nginx
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
  policyTypes:
    - Ingress
